# TsaoDFT_skill

./: .gitignore  .v05-workflow-probe  AGENTS.md  CHANGELOG.md  CITATION.cff  LICENSE  README.md  README.zh-CN.md  README_EN.md  THIRD_PARTY_NOTICES.md  install.ps1  install.sh  pyproject.toml  requirements.txt
.codex-plugin/: marketplace.json  plugin.json
.github/workflows/: apply-ai-readme-patch.yml  bootstrap.yml  ci.yml  v05-bootstrap.yml
_bootstrap/: install_bundle.py  part00.txt  part01.txt  part02.txt  part03.txt  part04.txt  part05.txt  part06.txt  part07.txt  part08.txt  part09.txt
_patch_bootstrap/: READY  TRIGGER  apply_patch.py  part00.txt  part01.txt  part02.txt  part03.txt  part04.txt  part05.txt
_v05_bundle/: part00.txt  part01.txt  part02.txt  part03.txt
assets/ai/: manifest.yaml
docs/: AI_IMAGE_GOVERNANCE.md  ARCHITECTURE.md  CAPABILITY_STATUS.yaml  CROSS_SKILL_HANDOFF.md  DEMO_FIGURES.md  DFT_SKILL_CATALOG_MAPPING.csv  DFT_SKILL_CATALOG_MAPPING.md  DFT_VALIDATION_LADDER.md  ECOSYSTEM.md  ENGINE_SUPPORT_MATRIX.md  MIGRATION.md  ROADMAP.md  SCHEMAS.md  SCIENTIFIC_BOUNDARIES.md  TEST_REPORT.md  dft_skill_catalog_index.yaml
scripts/: generate_checksums.py  generate_readme_demos.py  install.py  run_all_tests.py  validate_ai_assets.py  validate_catalog.py  validate_repo.py
skills/tsao-dft-catalysis-profile/: README.md  SKILL.md  catalog.yaml  manifest.yaml
skills/tsao-dft-hpc-provenance/: README.md  SKILL.md  catalog.yaml  manifest.yaml
skills/tsao-dft-kinetics-multiscale/: README.md  SKILL.md  (+2 more)
tests/: test_ai_assets.py  test_repository.py
(+259 files in other folders)
